--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^5.0.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
